<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Buzzzleeper</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!-- ADD ADDRESS-->
    <string name="add">Add</string>
    <string name="addNewLocation">Add New Location</string>
    <string name="name">Name</string>
    <string name="setName">Set Name</string>
    <string name="address">Address</string>
    <string name="searchAddress">Search Address</string>
    <string name="alarm">Alarm</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="buffer">Buffer</string>
    <string name="coordinate">Coordinate</string>
    <string name="confirm">Confirm</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="meters">Meters</string>
    <string name="km">KM</string>
    <string name="bufferDistance">Buffer Distance</string>
    <string name="setRingtone">Set a Ringtone</string>
    
    <!-- ADD ADDRESS MGS ERROS-->
    <string name="nameCannotBeIsEmpty">Name cannot be empty</string>
    <string name="addressCannotBeIsEmpty">Address cannot be empty</string>
    <string name="positionCannotBeIsEmpty">Position cannot be empty</string>
    <string name="bufferCannotBeIsEmpty">Buffer cannot be empty</string>
    <string name="ringtoneCannotBeIsEmpty">Ringtone cannot be empty</string>
    <string name="pleaseFixItFirst">Please fix if first</string>
    
    <!-- ADD ADDRESS MGS SUCCESS-->
    <string name="success">Success</string>
    <string name="busStopAdded">Bus Stop Added</string>
    <string name="busStopUpdated">Bus Stop Updated</string>
    <string name="ok">OK</string>
    
    <!-- CONTEXT MENU ADDRESS -->
    <string name="editBusStop">Edit Bus Stop</string>
    <string name="removeBusStop">Remove Bus Stop</string>
    
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="removeLocation">Remove Location</string>
    <string name="msgRemoveBusStop">Are you sure you want to remove this Bus Stop?</string>
    <string name="msgAppStopedActivateGps">Your GPS provider was deactivated, please turn it on and restart your alarm</string>
    <string name="gpsStopped">GPS Stopped</string>
    
    
    <!-- CONTEXT MAIN MENU  -->
    <string name="menu_settings">Settings</string>
    
    <string name="info">Info</string>
    <string name="map">Map</string>
    <string name="stop">Stop</string>
    <string name="start">Start</string>
    <string name="starting">Starting</string>

</resources>
