<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/addAddressScrollView"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_marginBottom="5dip"
    tools:context=".AddAddress" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >
        
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:id="@+id/headerAddAddress"
		    style="@style/header" >
		
		    <RelativeLayout
		        android:id="@+id/btnArrowBack"
		        android:layout_width="40dip"
		        android:layout_height="fill_parent"
		        android:layout_alignParentLeft="true"
		        android:layout_centerVertical="true"
		        android:background="@drawable/btn_theme_default" >
		
		        <ImageView
		            android:layout_width="wrap_content"
		            android:layout_height="wrap_content"
		            android:layout_centerHorizontal="true"
		            android:layout_centerVertical="true"
		            android:src="@drawable/ic_arrow_back" />
		    </RelativeLayout>
				
		    <LinearLayout
	            android:id="@+id/rlAddAddress"
	            android:layout_width="fill_parent"
	            android:layout_height="53dp"
	            android:orientation="horizontal" >
	
	            <EditText
	                android:id="@+id/txtSearchAddress"
	                style="@style/textEdit"
	                android:background="@drawable/edittext_bg"
	                android:layout_width="fill_parent"
	                android:layout_marginRight="0dip"
	                android:imeOptions="actionSearch"	                
	                android:layout_weight="1"
	                android:textColorHint="@color/white"
	                android:textColor="@color/white"
	                android:hint="@string/searchAddress" />
	
	            <RelativeLayout
	                android:id="@+id/btnSearchAddress"
	                style="@style/btnBackgroundThemeA"
	                android:layout_marginRight="5dip"
	                android:layout_marginTop="5dip" >
	
	                <ImageView
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_centerHorizontal="true"
	                    android:layout_centerVertical="true"
	                    android:src="@drawable/ic_magnifier_white"
	                    tools:ignore="ContentDescription" />
	            </RelativeLayout>
	
	            <RelativeLayout
	                android:id="@+id/btnSearchGPS"
	                style="@style/btnBackgroundThemeA"
	                android:layout_marginRight="5dip"
	                android:layout_marginTop="5dip" >
	
	                <ImageView
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:layout_centerHorizontal="true"
	                    android:layout_centerVertical="true"
	                    android:src="@drawable/ic_gps_white"
	                    tools:ignore="ContentDescription" />
	            </RelativeLayout>
	        </LinearLayout>
		
		</LinearLayout>

        <LinearLayout
            android:id="@+id/llContainerMap"
            android:layout_width="fill_parent"
            android:background="@color/backgroundThemeErrorB"
            android:layout_height="150dip">

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent" >
	            
                <fragment
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/googleMap"
                    android:name="br.com.dafm.android.buzzzleeper.AddAddress"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_alignParentRight="true"
            		android:layout_alignParentTop="true"
                    class="com.google.android.gms.maps.SupportMapFragment" />
	            
                <ImageView
                    android:id="@+id/btnMapExpand"
                    android:src="@drawable/ic_map_expand"
                    android:background="@drawable/ic_map_button_selector"
                    android:layout_width="30dip"
                    android:layout_height="30dip"
                    android:padding="2dip"
                    android:layout_marginLeft="10dip"
                    android:layout_marginTop="10dip"
                    android:layout_alignParentLeft="true"
            		android:layout_alignParentTop="true"/>

            </RelativeLayout>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/rlInfoMap"
            style="@style/infoMap" >

            <ImageView
                android:id="@+id/icPinMap"
                style="@style/icPinMap"
                android:src="@drawable/ic_pin_map" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                
	            <TextView
	                android:id="@+id/txtAddressLocation"
	                style="@style/textAddress"
	                android:text="" />
	
	            <TextView
	                android:id="@+id/txtCoordinates"
	                style="@style/textCoordinate"
	                android:text="" />
            </LinearLayout>

        </LinearLayout>

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:fillViewport="true" >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" >
	                            
                <RelativeLayout
                    android:id="@+id/btnBuffer"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dip"
                    android:layout_marginRight="5dip"
                    android:layout_marginTop="5dip"
                    android:gravity="center" >

                    <TextView
                        android:id="@+id/txtBuffer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true" />

                    <SeekBar
                        android:id="@+id/seekBuffer"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/txtBuffer"
                        android:layout_marginTop="3dp"
                        android:max="2000"
                        android:progress="100"
                        android:progressDrawable="@drawable/scrubber_progress"
                        android:thumb="@drawable/scrubber_control" />
                </RelativeLayout>
                
                 <EditText
                    android:id="@+id/txtAddName"
                    style="@style/textEdit"
                    android:layout_width="fill_parent"
                    android:hint="@string/name" />

                <LinearLayout
                    android:id="@+id/btnRingtone"
                    style="@style/btnSpinner"
                    android:layout_marginLeft="5dip"
                    android:layout_marginRight="5dip"
                    android:layout_marginTop="5dip" >

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_weight="1" >

                        <TextView
                            android:id="@+id/txtRingtone"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:text="@string/setRingtone" />
                    </RelativeLayout>

                    <RelativeLayout
                        android:id="@+id/icBtnRingtone"
                        style="@style/btnBackgroundThemeA" >

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:src="@drawable/ic_ringtone"
                            tools:ignore="ContentDescription" />
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/btnControllers"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:layout_margin="5dip"
                    android:baselineAligned="false"
                    android:gravity="bottom"
                    android:weightSum="2" >

                    <LinearLayout
                        android:id="@+id/btnAddCancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" >

                        <RelativeLayout
                            android:id="@+id/icBtnCancel"
                            style="@style/imgContainer"
                            android:background="@color/backgroundThemeErrorA" >

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:layout_centerVertical="true"
                                android:src="@drawable/ic_cross_white"
                                tools:ignore="ContentDescription" />
                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_weight="1"
                            android:background="@drawable/btn_theme_error_inverse" >

                            <TextView
                                android:id="@+id/txtBtnCancel"
                                style="@style/btnContentCancel"
                                android:text="@string/cancel" />
                        </RelativeLayout>
                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/btnAddConfirm"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" >

                        <RelativeLayout
                            android:id="@+id/icBtnConfirm"
                            style="@style/imgContainer"
                            android:layout_marginLeft="5dip"
                            android:background="@color/backgroundThemeA" >

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerHorizontal="true"
                                android:layout_centerVertical="true"
                                android:src="@drawable/ic_send_white"
                                tools:ignore="ContentDescription" />
                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="fill_parent"
                            android:layout_height="fill_parent"
                            android:layout_weight="1"
                            android:background="@drawable/btn_theme_default_inverse" >

                            <TextView
                                android:id="@+id/txtBtnConfirm"
                                style="@style/btnContentConfirm"
                                android:text="@string/confirm" />
                        </RelativeLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>